--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
 
           <div class="service-card">
             <div class="service-image">
-              <img
-                src="https://images.unsplash.com/photo-1470225620780-dba8ba36b745?ixlib=rb-4.0.3&auto=format&fit=crop&w=2070&q=80"
-                alt="Professional DJ Services"
-              />
+              <img src="/dj deno.jpg" alt="Professional DJ Services" />
               <div class="service-overlay"></div>
             </div>
             <div class="service-content">
@@ -135,7 +132,7 @@
           <div class="service-card">
             <div class="service-image">
               <img
-                src="https://images.unsplash.com/photo-1501281668745-f7f57925c3b4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                src="/light deno.jpg"
                 alt="Stage Lighting for Entertainment"
               />
               <div class="service-overlay"></div>
