--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
             <div class="contact-details">
               <div class="contact-detail">
                 <i class="fas fa-map-marker-alt"></i>
-                <p>Nairobi, Kenya</p>
+                <p>Eldoret, Kenya</p>
               </div>
               <div class="contact-detail">
                 <i class="fas fa-phone"></i>
-                <p>0752 307 098</p>
+                <p>+254 723 281784</p>
               </div>
               <div class="contact-detail">
                 <i class="fas fa-envelope"></i>
@@ -240,7 +240,7 @@
               </div>
               <div class="contact-detail">
                 <i class="fab fa-whatsapp"></i>
-                <p>0752 307 098</p>
+                <p>+254 723 281784</p>
               </div>
             </div>
 
