--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
           <div class="service-card">
             <div class="service-image">
-              <img src="/dj deno.jpg" alt="Professional DJ Services" />
+              <img src="dj deno.jpg" alt="Professional DJ Services" />
               <div class="service-overlay"></div>
             </div>
             <div class="service-content">
@@ -132,7 +132,7 @@
           <div class="service-card">
             <div class="service-image">
               <img
-                src="/light deno.jpg"
+                src="light deno.jpg"
                 alt="Stage Lighting for Entertainment"
               />
               <div class="service-overlay"></div>
