--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
     </section>
 
     <!-- Services Section -->
-
     <section class="services" id="services">
       <div class="container">
         <h2>Our Services</h2>
@@ -199,14 +198,6 @@
           </div>
 
           <div class="portfolio-item">
-            <img src="system.jpg" alt="Festival Event" class="portfolio-img" />
-            <div class="portfolio-overlay">
-              <h3>Music systems</h3>
-              <p>Large-scale sound production for outdoor festivals</p>
-            </div>
-          </div>
-
-          <div class="portfolio-item">
             <img src="splashsound.jpg" alt="Club Event" class="portfolio-img" />
             <div class="portfolio-overlay">
               <h3>Sound Systems</h3>
@@ -217,7 +208,6 @@
       </div>
     </section>
 
-    <!-- Contact Section -->
     <!-- Contact Section -->
     <section class="contact" id="contact">
       <div class="container">
@@ -232,15 +222,15 @@
               </div>
               <div class="contact-detail">
                 <i class="fas fa-phone"></i>
-                <p>+254 723 281784</p>
+                <p><a href="tel:+254723281784">+254 723 281784</a></p>
               </div>
               <div class="contact-detail">
                 <i class="fas fa-envelope"></i>
-                <p>info@splashsounds.co.ke</p>
+                <p><a href="mailto:info@splashsounds.co.ke">info@splashsounds.co.ke</a></p>
               </div>
               <div class="contact-detail">
                 <i class="fab fa-whatsapp"></i>
-                <p>+254 723 281784</p>
+                <p><a href="https://wa.me/254723281784" target="_blank">+254 723 281784</a></p>
               </div>
             </div>
 
@@ -328,8 +318,8 @@
             <h3>Contact Info</h3>
             <ul class="footer-links">
               <li><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</li>
-              <li><i class="fas fa-phone"></i> 0752 307 098</li>
-              <li><i class="fas fa-envelope"></i> info@splashsounds.co.ke</li>
+              <li><i class="fas fa-phone"></i> <a href="tel:0752307098">0752 307 098</a></li>
+              <li><i class="fas fa-envelope"></i> <a href="mailto:info@splashsounds.co.ke">info@splashsounds.co.ke</a></li>
               <li><i class="fas fa-clock"></i> Mon-Sun: 24/7 Available</li>
             </ul>
           </div>
