--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         </p>
         <div class="hero-btns">
           <a href="#services" class="btn">Our Services</a>
-          <!-- In the hero section, change the Book Now button -->
           <a href="#contact" class="btn btn-secondary" id="openBookingModal"
             >Book Now</a
           >
@@ -254,7 +253,6 @@
             </div>
           </div>
 
-          <!-- Replace the form with a booking CTA -->
           <div class="booking-cta">
             <div class="cta-content">
               <i class="fas fa-calendar-check cta-icon"></i>
@@ -306,11 +304,11 @@
           <div class="footer-col">
             <h3>Services</h3>
             <ul class="footer-links">
-              <li><a href="#">Sound System Rentals</a></li>
-              <li><a href="#">DJ Services</a></li>
-              <li><a href="#">Event Staffing</a></li>
-              <li><a href="#">Lighting Solutions</a></li>
-              <li><a href="#">Stage Setup</a></li>
+              <li><a href="#services">Sound System Rentals</a></li>
+              <li><a href="#services">DJ Services</a></li>
+              <li><a href="#services">Event Staffing</a></li>
+              <li><a href="#services">Lighting Solutions</a></li>
+              <li><a href="#services">Stage Setup</a></li>
             </ul>
           </div>
 
@@ -332,6 +330,7 @@
         </div>
       </div>
     </footer>
+
     <!-- Booking Modal -->
     <div class="modal" id="bookingModal">
       <div class="modal-content">
@@ -481,6 +480,7 @@
         </div>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
