--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
               <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
               <a
-                href="https://wa.me/254752307098"
+                href="https://wa.me/254723281784"
                 class="social-link whatsapp-link"
                 target="_blank"
               >
@@ -316,7 +316,7 @@
             <h3>Contact Info</h3>
             <ul class="footer-links">
               <li><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</li>
-              <li><i class="fas fa-phone"></i> <a href="tel:0752307098">0752 307 098</a></li>
+              <li><i class="fas fa-phone"></i> <a href="tel:+254723281784">+254 723 281784</a></li>
               <li><i class="fas fa-envelope"></i> <a href="mailto:info@splashsounds.co.ke">info@splashsounds.co.ke</a></li>
               <li><i class="fas fa-clock"></i> Mon-Sun: 24/7 Available</li>
             </ul>
@@ -357,8 +357,10 @@
                   type="tel"
                   id="booking-phone"
                   class="form-control"
+                  placeholder="e.g., 0712345678 or +254712345678"
                   required
                 />
+                <small class="phone-hint">Enter your number starting with 07, 01, or +254</small>
               </div>
             </div>
 
