--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div class="service-card">
             <div class="service-image">
               <img
-                src="https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                src="splsyt.jpg"
                 alt="Professional Sound Systems"
               />
               <div class="service-overlay"></div>
@@ -262,14 +262,9 @@
 
         <!-- In your index.html, in the portfolio section -->
         <div class="portfolio-cta">
-          <a
-            href="portfolio-gallery.html"
-            class="btn"
-            id="viewPortfolioBtn"
-            target="_blank"
-          >
+          <a href="portfolio-gallery.html" class="btn" id="viewPortfolioBtn">
             <i class="fas fa-images"></i> View Full Portfolio Gallery
-          </a>
+        </a>
         </div>
       </div>
     </section>
