--- a/index.html
+++ b/index.html
@@ -405,15 +405,15 @@
           <div class="footer-col">
             <h3>Contact Info</h3>
             <ul class="footer-links">
-              <li><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</li>
+              <li><i class="fas fa-map-marker-alt"></i> Eldoret, Kenya</li>
               <li>
                 <i class="fas fa-phone"></i>
                 <a href="tel:+254723281784">+254 723 281784</a>
               </li>
               <li>
                 <i class="fas fa-envelope"></i>
-                <a href="mailto:info@splashsounds.co.ke"
-                  >info@splashsounds.co.ke</a
+                <a href="mailto:splashsoundentertainment@gmail.com"
+                  >splashsoundentertainment@gmail.com</a
                 >
               </li>
               <li><i class="fas fa-clock"></i> Mon-Sun: 24/7 Available</li>
