--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://splashsounds.co.ke" />
-    <!-- <meta property="og:image" content="https://splashsounds.co.ke/images/og-image.jpg"> -->
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -40,14 +39,9 @@
       name="twitter:description"
       content="Premium sound systems and entertainment services for unforgettable events in Kenya"
     />
-    <!-- <meta name="twitter:image" content="https://splashsounds.co.ke/images/twitter-image.jpg"> -->
 
     <!-- Theme Color for Mobile Browsers -->
     <meta name="theme-color" content="#ff3366" />
-
-    <!-- Favicon (Uncomment when you have the logo) -->
-    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico"> -->
-    <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="styles.css" />
@@ -101,6 +95,7 @@
           <a href="#contact" class="btn btn-secondary" id="openBookingModal"
             >Book Now</a
           >
+          <a href="portfolio-gallery.html" class="btn btn-repertoire">Our Repertoire</a>
         </div>
       </div>
     </section>
@@ -324,14 +319,18 @@
 
             <h3>Follow Us</h3>
             <div class="social-links">
-              <a href="#" class="social-link"
+              <a href="https://www.facebook.com/share/1GWGNAGQuJ/" class="social-link" target="_blank"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a href="#" class="social-link"
+              <a href="https://www.instagram.com/splash.sounds.entertainment" class="social-link" target="_blank"
                 ><i class="fab fa-instagram"></i
               ></a>
-              <a href="#" class="social-link"><i class="fab fa-tiktok"></i></a>
-              <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+              <a href="https://www.tiktok.com/@splashsoundsentertainmen?_r=1&_t=ZS-93nrAjM97MP" class="social-link" target="_blank"
+                ><i class="fab fa-tiktok"></i
+              ></a>
+              <a href="https://www.youtube.com/@splashsoundsEntertainment" class="social-link" target="_blank"
+                ><i class="fab fa-youtube"></i
+              ></a>
               <a
                 href="https://wa.me/254723281784"
                 class="social-link whatsapp-link"
@@ -376,7 +375,7 @@
             <h3>Splash Sounds</h3>
             <p>
               Bringing energy and professionalism to events of all sizes with
-              premium sound systems and entertainment services across Kenya .
+              premium sound systems and entertainment services across Kenya.
             </p>
           </div>
 
@@ -388,6 +387,7 @@
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#testimonials">Testimonials</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="portfolio-gallery.html">Gallery</a></li>
             </ul>
           </div>
 
