--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
               <div class="contact-detail">
                 <i class="fas fa-envelope"></i>
                 <p>
-                  <a href="mailto:info@splashsounds.co.ke"
-                    >info@splashsounds.co.ke</a
+                  <a href="mailto:splashsoundentertainment@gmail.com"
+                    >splashsoundentertainment@gmail.com</a
                   >
                 </p>
               </div>
