--- a/portfolio-gallery.html
+++ b/portfolio-gallery.html
@@ -192,7 +192,7 @@
                     <ul class="footer-links">
                         <li><i class="fas fa-map-marker-alt"></i> Eldoret, Kenya</li>
                         <li><i class="fas fa-phone"></i> <a href="tel:+254723281784">+254 723 281784</a></li>
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@splashsounds.co.ke">info@splashsounds.co.ke</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:splashsoundentertainment@gmail.com">splashsoundentertainment@gmail.com</a></li>
                         <li><i class="fas fa-clock"></i> Mon-Sun: 24/7 Available</li>
                     </ul>
                 </div>
