--- a/index.html
+++ b/index.html
@@ -297,21 +297,21 @@
               </div>
               <div class="contact-detail">
                 <i class="fas fa-phone"></i>
-                <p><a href="tel:+254723281784">+254 723 281784</a></p>
+                <p><a href="tel:+254719221000">+254 719 221000</a></p>
               </div>
               <div class="contact-detail">
                 <i class="fas fa-envelope"></i>
                 <p>
-                  <a href="mailto:splashsoundentertainment@gmail.com"
-                    >splashsoundentertainment@gmail.com</a
+                  <a href="mailto:info@splashsounds.co.ke"
+                    >info@splashsounds.co.ke</a
                   >
                 </p>
               </div>
               <div class="contact-detail">
                 <i class="fab fa-whatsapp"></i>
                 <p>
-                  <a href="https://wa.me/254723281784" target="_blank"
-                    >+254 723 281784</a
+                  <a href="https://wa.me/254719221000" target="_blank"
+                    >+254 719 221000</a
                   >
                 </p>
               </div>
@@ -332,7 +332,7 @@
                 ><i class="fab fa-youtube"></i
               ></a>
               <a
-                href="https://wa.me/254723281784"
+                href="https://wa.me/254719221000"
                 class="social-link whatsapp-link"
                 target="_blank"
               >
@@ -408,7 +408,7 @@
               <li><i class="fas fa-map-marker-alt"></i> Eldoret, Kenya</li>
               <li>
                 <i class="fas fa-phone"></i>
-                <a href="tel:+254723281784">+254 723 281784</a>
+                <a href="tel:+254719221000">+254 719 221000</a>
               </li>
               <li>
                 <i class="fas fa-envelope"></i>
@@ -568,6 +568,15 @@
                     id="service-dj"
                   />
                   DJ Services
+                </label>
+                <label class="checkbox-label">
+                  <input
+                    type="checkbox"
+                    name="booking-services"
+                    value="mc"
+                    id="service-mc"
+                  />
+                  MC Services
                 </label>
                 <label class="checkbox-label">
                   <input
