--- a/portfolio-gallery.html
+++ b/portfolio-gallery.html
@@ -81,7 +81,7 @@
                     <a href="https://www.youtube.com/@splashsoundsEntertainment" class="social-link" target="_blank">
                         <i class="fab fa-youtube"></i>
                     </a>
-                    <a href="https://wa.me/254723281784" class="social-link whatsapp-link" target="_blank">
+                    <a href="https://wa.me/254719221000" class="social-link whatsapp-link" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                     </a>
                 </div>
@@ -169,7 +169,7 @@
                         <a href="https://www.youtube.com/@splashsoundsEntertainment" class="social-link" target="_blank">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a href="https://wa.me/254723281784" class="social-link whatsapp-link" target="_blank">
+                        <a href="https://wa.me/254719221000" class="social-link whatsapp-link" target="_blank">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
@@ -191,8 +191,8 @@
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
                         <li><i class="fas fa-map-marker-alt"></i> Eldoret, Kenya</li>
-                        <li><i class="fas fa-phone"></i> <a href="tel:+254723281784">+254 723 281784</a></li>
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:splashsoundentertainment@gmail.com">splashsoundentertainment@gmail.com</a></li>
+                        <li><i class="fas fa-phone"></i> <a href="tel:+254719221000">+254 719 221000</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@splashsounds.co.ke">info@splashsounds.co.ke</a></li>
                         <li><i class="fas fa-clock"></i> Mon-Sun: 24/7 Available</li>
                     </ul>
                 </div>
